[gd_scene load_steps=10 format=3 uid="uid://dec7oyqkabwjl"]

[ext_resource type="Texture2D" uid="uid://biu30j2g7qmya" path="res://assets/img/special_effect_board.png" id="1_5j8fr"]
[ext_resource type="Script" path="res://scenes/elevator/scripts/elevator.gd" id="1_of8jo"]
[ext_resource type="SpriteFrames" uid="uid://cyxsgqa4wm1h" path="res://scenes/elevator/res/elevator_sprite_frames.tres" id="2_8wwdx"]
[ext_resource type="SpriteFrames" uid="uid://cv07pp3debgvp" path="res://scenes/elevator/res/elevator_num_sprite_frames.tres" id="3_smlv6"]
[ext_resource type="AudioStream" uid="uid://bce6bjhmcah8o" path="res://assets/sound/elevator_start.wav" id="5_kt4ps"]
[ext_resource type="AudioStream" uid="uid://2jlqvb1w6j8u" path="res://assets/sound/elevator_run.wav" id="6_3mjof"]
[ext_resource type="AudioStream" uid="uid://c13tkhgqyqbag" path="res://assets/sound/elevator_arrived.wav" id="7_j1gc6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wvhse"]
size = Vector2(64, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yyg3s"]
size = Vector2(35, 48)

[node name="Elevator" type="AnimatableBody2D"]
script = ExtResource("1_of8jo")

[node name="Lights" type="Node2D" parent="."]

[node name="PointLight2D" type="PointLight2D" parent="Lights"]
position = Vector2(2, -36)
scale = Vector2(0.064, 0.008)
color = Color(0, 1, 1, 1)
blend_mode = 2
texture = ExtResource("1_5j8fr")

[node name="PointLight2D2" type="PointLight2D" parent="Lights"]
position = Vector2(2.5, -3)
scale = Vector2(0.035, 0.014)
blend_mode = 2
texture = ExtResource("1_5j8fr")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(2, 7)
sprite_frames = ExtResource("2_8wwdx")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="AnimatedSprite2D"]
sprite_frames = ExtResource("3_smlv6")
frame = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2, 47)
shape = SubResource("RectangleShape2D_wvhse")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(2.5, 14)
shape = SubResource("RectangleShape2D_yyg3s")

[node name="Start" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_kt4ps")
bus = &"Effect"

[node name="Run" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_3mjof")
bus = &"Effect"

[node name="Arrived" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_j1gc6")
bus = &"Effect"

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
